--- a/src/style/var.less
+++ b/src/style/var.less
@@ -592,7 +592,6 @@
 @share-sheet-description-font-size: @font-size-sm;
 @share-sheet-description-line-height: 16px;
 @share-sheet-icon-size: 48px;
-@share-sheet-option-margin-right: @padding-xl;
 @share-sheet-option-name-color: @gray-7;
 @share-sheet-option-name-font-size: @font-size-sm;
 @share-sheet-cancel-button-font-size: @font-size-lg;
